--- a/index.html
+++ b/index.html
@@ -54,16 +54,18 @@
 
     <section>
         <div class="mt-16">
-            <div class="flex gap-[10px]">
-                <div class="left-heading">
-                    <h1 class="hidden md:block md: p-[40px] uppercase tracking-[0.8rem] font-semibold"
+            <div class="flex md:gap-[20px] md:p-[30px] p-[20px]">
+                <div>
+                    <h1 class="hidden md:block uppercase tracking-[0.8rem] font-semibold"
                         style="writing-mode: vertical-rl;">Our
                         Services</h1>
                 </div>
-                <div class="flex flex-col gap-[10px]">
+                <div class="flex flex-col gap-[10px] space-y-4">
                     <!-- <h2>Services I Render</h2> -->
-                    <h3 class="font-semibold">What We Offer</h3>
-                    <div class="bg-[rgb(167,98,19)] h-1 w-32"></div>
+                    <div class="space-y-2">
+                        <h3 class="font-semibold">What We Offer</h3>
+                        <div class="bg-[rgb(167,98,19)] h-1 w-32"></div>
+                    </div>
                     <div class="grid md:grid-cols-3 justify-center items-center gap-5 md:gap-8">
                         <div
                             class="flex flex-col w-full p-[40px] gap-[10px] bg-[rgb(247,245,243)] rounded-lg shadow-md hover:-translate-y-1 hover:shadow-lg duration-500">
@@ -129,16 +131,18 @@
     <!-- WHY US? -->
     <section>
         <div class="mt-16">
-            <div class="flex gap-[10px]">
+            <div class="flex md: gap-[20px] md:p-[30px]">
                 <div class="left-heading">
-                    <h1 class="hidden md:block md: p-[40px] uppercase tracking-[0.8rem] font-semibold"
+                    <h1 class="hidden md:block uppercase tracking-[0.8rem] font-semibold"
                         style="writing-mode: vertical-rl;">Why
                         Us</h1>
                 </div>
-                <div class="flex flex-col gap-[10px]">
+                <div class="flex flex-col gap-[10px] space-y-4">
                     <!-- <h2>Services I Render</h2> -->
-                    <h3 class="font-semibold">Why Choose Us</h3>
-                    <div class="bg-[rgb(167,98,19)] h-1 w-32"></div>
+                    <div class="space-y-2">
+                        <h3 class="font-semibold">Why Choose Us</h3>
+                        <div class="bg-[rgb(167,98,19)] h-1 w-32"></div>
+                    </div>
                     <div class="grid md:grid-cols-3 justify-center items-center gap-5 md:gap-8">
                         <div
                             class="flex flex-col w-full p-[40px] gap-[10px] bg-[rgb(247,245,243)] rounded-lg shadow-md hover:-translate-y-1 hover:shadow-lg duration-500">
@@ -187,7 +191,7 @@
                         magnam! Fuga ipsa aut in, eum dolorum placeat. Itaque nam omnis sint modi! Cupiditate, dolore
                         ex.</p>
                     <div class="">
-                        <iframe class="w-96 h-72 md:w-full md:h-96"
+                        <iframe class="w-full h-72 md:h-96"
                             src="https://www.youtube.com/embed/_iwW5PQcdGw?si=QGefRhjh_NNkbp8s"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -269,7 +273,7 @@
                             <h4 class="absolute bottom-3 font-semibold text-lg">Metics Fashion</h4>
                         </div>
                     </a>
-                    
+
                 </div>
                 <a href="#" class="bg-black px-4 py-3 rounded-bl-3xl rounded-tr-3xl text-white">View more work</a>
             </div>
