--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                         <h2 class="text-2xl font-semibold">Testimonials</h2>
                         <div class="bg-[rgb(167,98,19)] h-1 w-32"></div>
                     </div>
-                    <p class="text-sm max-w-sm text-center md:max-w-md">Lorem ipsum dolor sit amet consectetur
+                    <p class="text-sm max-w-xs text-center md:max-w-md">Lorem ipsum dolor sit amet consectetur
                         adipisicing elit. Ad, deserunt!</p>
                 </div>
                 <div class="grid md:grid-cols-3 md:gap-0 gap-4">
@@ -353,35 +353,35 @@
 
     <!-- Form -->
     <section class="mt-16">
-        <div class="py-8 lg:py-16 px-4 mx-auto max-w-screen-md">
-            <h2 class="mb-4 text-2xl md:text-4xl tracking-tight font-extrabold text-center text-black dark:text-white">
+        <div class="py-8 lg:py-16 px-4 mx-auto max-w-sm md:max-w-screen-md">
+            <h2 class="mb-4 text-2xl md:text-4xl tracking-tight font-extrabold text-center text-black">
                 Contact Us</h2>
-            <p class="mb-8 lg:mb-16 font-light text-center text-gray-500 dark:text-gray-400 text-sm md:text-md">Got
+            <p class="mb-8 lg:mb-16 font-light text-center text-sm md:text-md">Got
                 a new project in mind? Send us a message today. Let's get you started</p>
             <form action="#" class="space-y-8">
                 <div>
-                    <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300">Your
+                    <label for="email" class="block mb-2 text-sm font-medium text-gray-900">Your
                         email</label>
                     <input type="email" id="email"
-                        class="shadow-sm focus:outline-none bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500 dark:shadow-sm-light"
+                        class="shadow-sm focus:outline-none bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5"
                         placeholder="name@email.com" required>
                 </div>
                 <div>
                     <label for="subject"
-                        class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300">Subject</label>
+                        class="block mb-2 text-sm font-medium text-gray-900">Subject</label>
                     <input type="text" id="subject"
-                        class="block focus:outline-none p-3 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 shadow-sm focus:ring-primary-500 focus:border-primary-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500 dark:shadow-sm-light"
+                        class="block focus:outline-none p-3 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 shadow-sm focus:ring-primary-500 focus:border-primary-500"
                         placeholder="Let us know how we can help you" required>
                 </div>
                 <div class="sm:col-span-2">
-                    <label for="message" class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-400">Your
+                    <label for="message" class="block mb-2 text-sm font-medium text-gray-900">Your
                         message</label>
                     <textarea id="message" rows="6"
-                        class="block focus:outline-none p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg shadow-sm border border-gray-300 focus:ring-primary-500 focus:border-primary-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+                        class="block focus:outline-none p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg shadow-sm border border-gray-300 focus:ring-primary-500 focus:border-primary-500"
                         placeholder="Hi, I would like to get started with..."></textarea>
                 </div>
                 <button type="submit"
-                    class="py-3 px-5 text-sm font-medium text-center text-white rounded-lg bg-black rounded-bl-3xl rounded-tr-3xl cursor-pointer hover:bg-white hover:text-black hover:border duration-500 focus:ring-4 focus:outline-none dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Send
+                    class="py-3 px-5 text-sm font-medium text-center text-white rounded-lg bg-black rounded-bl-3xl rounded-tr-3xl cursor-pointer hover:bg-white hover:text-black hover:border duration-500 focus:ring-4 focus:outline-none">Send
                     message</button>
             </form>
         </div>
@@ -389,7 +389,7 @@
 
     <!-- Footer -->
     <footer class="h-96 mt-16">
-        <div class="flex flex-col p-[40px]">
+        <div class="flex flex-col px-[40px]">
             <div class="text-3xl font-semibold">ML.</div>
 
             <!--Links -->
