--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manuelonics YT | Home</title>
     <script async="false" src="main.js"></script>
+    <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <script src="https://kit.fontawesome.com/6b7a54fe2b.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body class="">
@@ -26,7 +28,8 @@
             <!-- End of desktop nav menu -->
             <div class="flex flex-col gap-6 justify-between items-center px-8 py-4 md:flex-row md:h-[600px]">
                 <div class="order-2 md:order-1 flex flex-col space-y-5">
-                    <h1 class="text-3xl md:text-6xl">Learn & Code with <br>Emmanuel Alao</h1>
+                    <h1 class="text-3xl leading-relaxed md:text-5xl">Welcome To My <br><code
+                            class="typewriter text-4xl md:text-7xl tracking-tight">Digital Space</code></h1>
                     <p class="text-sm md:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. A, cupiditate
                         nihil et laborum nesciunt
                         vitae exercitationem natus voluptate voluptatem in nemo illum? Saepe temporibus laudantium
@@ -146,8 +149,8 @@
                     <div class="grid md:grid-cols-3 justify-center items-center gap-5 md:gap-8">
                         <div
                             class="flex flex-col w-full p-[40px] gap-[10px] bg-[rgb(247,245,243)] rounded-lg shadow-md hover:-translate-y-1 hover:shadow-lg duration-500">
-                            <i class="fa-solid fa-globe"></i>
-                            <h4 class="font-semibold text-[rgb(167,98,19)]">Web Development</h4>
+                            <i class="fa fa-heart"></i>
+                            <h4 class="font-semibold text-[rgb(167,98,19)]">Trusted by 50+ Clients</h4>
                             <p class="text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam quas
                                 pariatur sequi,
                                 expedita incidunt ipsum laudantium doloribus minima omnis similique natus hic maiores
@@ -155,8 +158,8 @@
                         </div>
                         <div
                             class="flex flex-col w-full p-[40px] gap-[10px] bg-[rgb(247,245,243)] rounded-lg shadow-md hover:-translate-y-1 hover:shadow-lg duration-500">
-                            <i class="fa-solid fa-globe"></i>
-                            <h4 class="font-semibold text-[rgb(167,98,19)]">Mobile App Development</h4>
+                            <i class="fa fa-clock-o"></i>
+                            <h4 class="font-semibold text-[rgb(167,98,19)]">Fast Turnaround Time</h4>
                             <p class="text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam quas
                                 pariatur sequi,
                                 expedita incidunt ipsum laudantium doloribus minima omnis similique natus hic maiores
@@ -164,8 +167,8 @@
                         </div>
                         <div
                             class="flex flex-col w-full p-[40px] gap-[10px] bg-[rgb(247,245,243)] rounded-lg shadow-md hover:-translate-y-1 hover:shadow-lg duration-500">
-                            <i class="fa-solid fa-globe"></i>
-                            <h4 class="font-semibold text-[rgb(167,98,19)]">Branding Solutions</h4>
+                            <i class="fa fa-handshake-o"></i>
+                            <h4 class="font-semibold text-[rgb(167,98,19)]">Creative & Modern Solutions</h4>
                             <p class="text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam quas
                                 pariatur sequi,
                                 expedita incidunt ipsum laudantium doloribus minima omnis similique natus hic maiores
@@ -258,19 +261,19 @@
                     elit. Nobis, laudantium.</p>
                 <div class="grid md:grid-cols-3 gap-8">
                     <a href="#">
-                        <div class="relative bg-cover bg-center h-72 flex flex-col items-center justify-end w-64 rounded-xl opacity-50 hover:opacity-100 hover:scale-105 duration-500"
+                        <div class="relative bg-cover bg-center h-72 flex flex-col items-center justify-end w-72 rounded-xl opacity-50 hover:opacity-100 hover:scale-105 duration-500"
                             style="background-image: linear-gradient(rgba(0,0,0,0.5), rgba(255,255,255,0.5)), url('./images/assorted-indian-food-different-bowls-dark-wooden-background-top-view-dishes-appetizers-cuisine-chicken-curry-rice-129630877.webp');">
                             <h4 class="absolute bottom-3 font-semibold text-lg">Fiids Apparel</h4>
                         </div>
                     </a>
                     <a href="#">
-                        <div class="relative bg-cover bg-center h-72 flex flex-col items-center justify-end w-64 rounded-xl opacity-50 hover:opacity-100 hover:scale-105 duration-500"
+                        <div class="relative bg-cover bg-center h-72 flex flex-col items-center justify-end w-72 rounded-xl opacity-50 hover:opacity-100 hover:scale-105 duration-500"
                             style="background-image: linear-gradient(rgba(0,0,0,0.5), rgba(255,255,255,0.5)), url('./images/Blog-intro.webp');">
                             <h4 class="absolute bottom-3 font-semibold text-lg">DevynTech Blog</h4>
                         </div>
                     </a>
                     <a href="#">
-                        <div class="relative bg-cover bg-center h-72 flex flex-col items-center justify-end w-64 rounded-xl opacity-50 hover:opacity-100 hover:scale-105 duration-500"
+                        <div class="relative bg-cover bg-center h-72 flex flex-col items-center justify-end w-72 rounded-xl opacity-50 hover:opacity-100 hover:scale-105 duration-500"
                             style="background-image: linear-gradient(rgba(0,0,0,0.5), rgba(255,255,255,0.5)), url('./images/branding-image-1011x1024.webp');">
                             <h4 class="absolute bottom-3 font-semibold text-lg">Metics Fashion</h4>
                         </div>
@@ -367,8 +370,7 @@
                         placeholder="name@email.com" required>
                 </div>
                 <div>
-                    <label for="subject"
-                        class="block mb-2 text-sm font-medium text-gray-900">Subject</label>
+                    <label for="subject" class="block mb-2 text-sm font-medium text-gray-900">Subject</label>
                     <input type="text" id="subject"
                         class="block focus:outline-none p-3 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 shadow-sm focus:ring-primary-500 focus:border-primary-500"
                         placeholder="Let us know how we can help you" required>
