add some content

--- a/index.html
+++ b/index.html
@@ -27,14 +27,11 @@
 
             <!-- End of desktop nav menu -->
             <div class="flex flex-col gap-6 justify-between items-center px-8 py-4 md:flex-row md:h-[600px]">
-                <div class="order-2 md:order-1 flex flex-col space-y-5">
+                <div class="order-2 w-3/4 md:order-1 flex flex-col items-center md:items-start space-y-6 md:space-y-7">
                     <h1 class="text-3xl leading-relaxed md:text-5xl">Welcome To My <br><code
                             class="typewriter text-4xl md:text-7xl tracking-tight">Digital Space</code></h1>
-                    <p class="text-sm md:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. A, cupiditate
-                        nihil et laborum nesciunt
-                        vitae exercitationem natus voluptate voluptatem in nemo illum? Saepe temporibus laudantium
-                        rerum
-                        eveniet natus dicta quos.</p>
+                    <p class="text-sm text-center md:text-lg max-w-md">Where creativity meets code, and ideas come to life. Glad to have you here!
+                      </p>
                     <div>
                         <a href="#"
                             class="bg-black text-white px-4 py-3 rounded-bl-3xl rounded-tr-3xl hover:bg-white hover:text-black hover:border duration-500 hover:duration-200">Subscribe
@@ -49,7 +46,7 @@
                     </div>
                 </div>
                 <div class="order-1 md:order-2 flex">
-                    <img class="rounded-full w-72 md:w-full" src="./images/emmanuel.jpg" alt="" srcset="">
+                    <img class="rounded-full w-72 md:w-[700px]" src="./images/emmanuel.jpg" alt="" srcset="">
                 </div>
             </div>
         </div>
@@ -74,55 +71,43 @@
                             class="flex flex-col w-full p-[40px] gap-[10px] bg-[rgb(247,245,243)] rounded-lg shadow-md hover:-translate-y-1 hover:shadow-lg duration-500">
                             <i class="fa-solid fa-globe"></i>
                             <h4 class="font-semibold text-[rgb(167,98,19)]">Web Development</h4>
-                            <p class="text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam quas
-                                pariatur sequi,
-                                expedita incidunt ipsum laudantium doloribus minima omnis similique natus hic maiores
-                                consequuntur consequatur unde?</p>
+                            <p class="text-sm">We build responsive, fast, and user-friendly websites tailored to your
+                                business goals — from landing pages to full-fledged platforms.</p>
                         </div>
                         <div
                             class="flex flex-col w-full p-[40px] gap-[10px] bg-[rgb(247,245,243)] rounded-lg shadow-md hover:-translate-y-1 hover:shadow-lg duration-500">
                             <i class="fa-solid fa-globe"></i>
                             <h4 class="font-semibold text-[rgb(167,98,19)]">Mobile App Development</h4>
-                            <p class="text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam quas
-                                pariatur sequi,
-                                expedita incidunt ipsum laudantium doloribus minima omnis similique natus hic maiores
-                                consequuntur consequatur unde?</p>
+                            <p class="text-sm">Whether it’s Android, iOS, or cross-platform, we develop sleek,
+                                functional mobile apps that keep your users engaged and coming back.</p>
                         </div>
                         <div
                             class="flex flex-col w-full p-[40px] gap-[10px] bg-[rgb(247,245,243)] rounded-lg shadow-md hover:-translate-y-1 hover:shadow-lg duration-500">
                             <i class="fa-solid fa-globe"></i>
                             <h4 class="font-semibold text-[rgb(167,98,19)]">Branding Solutions</h4>
-                            <p class="text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam quas
-                                pariatur sequi,
-                                expedita incidunt ipsum laudantium doloribus minima omnis similique natus hic maiores
-                                consequuntur consequatur unde?</p>
+                            <p class="text-sm">We help you stand out with unique brand identities — from logos and color
+                                palettes to full brand strategy and voice development.</p>
                         </div>
                         <div
                             class="flex flex-col w-full p-[40px] gap-[10px] bg-[rgb(247,245,243)] rounded-lg shadow-md hover:-translate-y-1 hover:shadow-lg duration-500">
                             <i class="fa-solid fa-globe"></i>
                             <h4 class="font-semibold text-[rgb(167,98,19)]">Marketing</h4>
-                            <p class="text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam quas
-                                pariatur sequi,
-                                expedita incidunt ipsum laudantium doloribus minima omnis similique natus hic maiores
-                                consequuntur consequatur unde?</p>
+                            <p class="text-sm">Boost your brand visibility with creative digital marketing strategies
+                                that convert — including social media, email, and content marketing.</p>
                         </div>
                         <div
                             class="flex flex-col w-full p-[40px] gap-[10px] bg-[rgb(247,245,243)] rounded-lg shadow-md hover:-translate-y-1 hover:shadow-lg duration-500">
                             <i class="fa-solid fa-globe"></i>
                             <h4 class="font-semibold text-[rgb(167,98,19)]">SEO</h4>
-                            <p class="text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam quas
-                                pariatur sequi,
-                                expedita incidunt ipsum laudantium doloribus minima omnis similique natus hic maiores
-                                consequuntur consequatur unde?</p>
+                            <p class="text-sm">Get found on Google. We optimize your site with SEO best practices to
+                                drive traffic and improve your search rankings organically.</p>
                         </div>
                         <div
                             class="flex flex-col w-full p-[40px] gap-[10px] bg-[rgb(247,245,243)] rounded-lg shadow-md hover:-translate-y-1 hover:shadow-lg duration-500">
                             <i class="fa-solid fa-globe"></i>
                             <h4 class="font-semibold text-[rgb(167,98,19)]">Real Estate Consultancy</h4>
-                            <p class="text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam quas
-                                pariatur sequi,
-                                expedita incidunt ipsum laudantium doloribus minima omnis similique natus hic maiores
-                                consequuntur consequatur unde?</p>
+                            <p class="text-sm">We offer expert guidance on property investment, buying, and selling —
+                                helping you make smart decisions in the real estate market.</p>
                         </div>
                     </div>
                 </div>
@@ -151,28 +136,22 @@
                             class="flex flex-col w-full p-[40px] gap-[10px] bg-[rgb(247,245,243)] rounded-lg shadow-md hover:-translate-y-1 hover:shadow-lg duration-500">
                             <i class="fa fa-heart"></i>
                             <h4 class="font-semibold text-[rgb(167,98,19)]">Trusted by 50+ Clients</h4>
-                            <p class="text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam quas
-                                pariatur sequi,
-                                expedita incidunt ipsum laudantium doloribus minima omnis similique natus hic maiores
-                                consequuntur consequatur unde?</p>
+                            <p class="text-sm">We’ve had the privilege of working with over 50 satisfied clients who
+                                trust us to bring their ideas to life with precision and professionalism.</p>
                         </div>
                         <div
                             class="flex flex-col w-full p-[40px] gap-[10px] bg-[rgb(247,245,243)] rounded-lg shadow-md hover:-translate-y-1 hover:shadow-lg duration-500">
                             <i class="fa fa-clock-o"></i>
                             <h4 class="font-semibold text-[rgb(167,98,19)]">Fast Turnaround Time</h4>
-                            <p class="text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam quas
-                                pariatur sequi,
-                                expedita incidunt ipsum laudantium doloribus minima omnis similique natus hic maiores
-                                consequuntur consequatur unde?</p>
+                            <p class="text-sm">We value your time. Our streamlined workflow ensures quick delivery
+                                without compromising quality — always on schedule, every time.</p>
                         </div>
                         <div
                             class="flex flex-col w-full p-[40px] gap-[10px] bg-[rgb(247,245,243)] rounded-lg shadow-md hover:-translate-y-1 hover:shadow-lg duration-500">
                             <i class="fa fa-handshake-o"></i>
                             <h4 class="font-semibold text-[rgb(167,98,19)]">Creative & Modern Solutions</h4>
-                            <p class="text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam quas
-                                pariatur sequi,
-                                expedita incidunt ipsum laudantium doloribus minima omnis similique natus hic maiores
-                                consequuntur consequatur unde?</p>
+                            <p class="text-sm">From eye-catching designs to innovative digital strategies, we craft
+                                solutions that are not just functional — but unforgettable.</p>
                         </div>
                     </div>
                 </div>
@@ -257,7 +236,7 @@
             <div class="flex flex-col justify-center items-center space-y-4">
                 <h1 class="text-2xl font-semibold">Featured Projects</h1>
                 <div class="bg-[rgb(167,98,19)] h-1 w-48"></div>
-                <p class="text-sm max-w-sm text-center md:max-w-md">Lorem ipsum dolor sit amet consectetur adipisicing
+                <p class="text-sm max-w-xs text-center md:max-w-md">Lorem ipsum dolor sit amet consectetur adipisicing
                     elit. Nobis, laudantium.</p>
                 <div class="grid md:grid-cols-3 gap-8">
                     <a href="#">
