--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 
             <!-- End of desktop nav menu -->
             <div class="flex flex-col gap-6 justify-between items-center px-8 py-4 md:flex-row md:h-[600px]">
-                <div class="order-2 w-3/4 md:order-1 flex flex-col items-center md:items-start space-y-6 md:space-y-7">
-                    <h1 class="text-3xl leading-relaxed md:text-5xl text-center">Welcome To My <br><code
+                <div class="order-2 w-3/4 md:order-1 flex flex-col items-center md:items-start md:items-start space-y-6 md:space-y-7">
+                    <h1 class="text-3xl leading-relaxed md:text-5xl text-center md:text-left">Welcome To My <br><code
                             class="typewriter text-4xl md:text-7xl tracking-tight">Digital Space</code></h1>
-                    <p class="text-sm text-center md:text-lg max-w-md">Where creativity meets code, and ideas come to life. Glad to have you here!
+                    <p class="text-sm text-center md:text-left md:text-lg max-w-md">Where creativity meets code, and ideas come to life. Glad to have you here!
                       </p>
                     <div>
                         <a href="#"
