fix smooth scroll

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <nav class="flex sticky top-0 z-50 backdrop-blur-md justify-between items-center border-b-1 p-6 md:p-8">
                 <div class="">ML.</div>
                 <ul class="flex gap-5 text-sm md:text-[16px]">
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Videos</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#" class="btn dark">Contact</a></li>
+                    <li><a href="#services">About</a></li>
+                    <li><a href="#process">Videos</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#contact" class="btn dark">Contact</a></li>
                 </ul>
             </nav>
 
@@ -52,7 +52,7 @@
         </div>
     </header>
 
-    <section>
+    <section id="services">
         <div class="mt-16">
             <div class="flex md:gap-[20px] md:p-[30px] p-[20px]">
                 <div>
@@ -162,7 +162,7 @@
 
 
     <!-- OUR PROCESS -->
-    <section>
+    <section id="process">
         <div class="p-[40px]">
             <div class="flex flex-col md:flex-row gap-[30px]">
                 <div class="flex flex-col gap-[20px]">
@@ -334,7 +334,7 @@
     </section>
 
     <!-- Form -->
-    <section class="mt-16">
+    <section class="mt-16" id="contact">
         <div class="py-8 lg:py-16 px-4 mx-auto max-w-sm md:max-w-screen-md">
             <h2 class="mb-4 text-2xl md:text-4xl tracking-tight font-extrabold text-center text-black">
                 Contact Us</h2>
