--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manuelonics YT | Home</title>
-    <script async="false" src="main.js"></script>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <script src="https://kit.fontawesome.com/6b7a54fe2b.js" crossorigin="anonymous"></script>
@@ -27,11 +26,13 @@
 
             <!-- End of desktop nav menu -->
             <div class="flex flex-col gap-6 justify-between items-center px-8 py-4 md:flex-row md:h-[600px]">
-                <div class="order-2 w-3/4 md:order-1 flex flex-col items-center md:items-start md:items-start space-y-6 md:space-y-7">
+                <div
+                    class="order-2 w-3/4 md:order-1 flex flex-col items-center md:items-start md:items-start space-y-6 md:space-y-7">
                     <h1 class="text-3xl leading-relaxed md:text-5xl text-center md:text-left">Welcome To My <br><code
                             class="typewriter text-4xl md:text-7xl tracking-tight">Digital Space</code></h1>
-                    <p class="text-sm text-center md:text-left md:text-lg max-w-md">Where creativity meets code, and ideas come to life. Glad to have you here!
-                      </p>
+                    <p class="text-sm text-center md:text-left md:text-lg max-w-md">Where creativity meets code, and
+                        ideas come to life. Glad to have you here!
+                    </p>
                     <div>
                         <a href="#"
                             class="bg-black text-white px-4 py-3 rounded-bl-3xl rounded-tr-3xl hover:bg-white hover:text-black hover:border duration-500 hover:duration-200">Subscribe
@@ -45,9 +46,13 @@
                         <i class="fa-brands fa-x-twitter"></i>
                     </div>
                 </div>
-                <div class="order-1 md:order-2 flex">
-                    <img class="rounded-full w-72 md:w-[700px]" src="./images/emmanuel.jpg" alt="" srcset="">
+
+                <!-- <img class="rounded-full w-72 border-3 bg-gradient-to-r from-purple-400 to-purple-700 md:w-[700px]" src="./images/emmanuel.jpg" alt="" srcset=""> -->
+                <div
+                    class="p-1 order-1 md:order-2 rounded-full bg-gradient-to-r from-yellow-800 to-orange-300 w-72 md:w-[700px]">
+                    <img class="rounded-full w-full h-full object-cover" src="./images/emmanuel.jpg" alt="" />
                 </div>
+
             </div>
         </div>
     </header>
@@ -368,6 +373,12 @@
         </div>
     </section>
 
+
+    <!-- DOGS -->
+     <section id="breeds">
+
+     </section>
+
     <!-- Footer -->
     <footer class="h-96 mt-16">
         <div class="flex flex-col px-[40px]">
@@ -425,6 +436,7 @@
             </div>
         </div>
     </footer>
+    <script src="main.js"></script>
 </body>
 
 </html>
